[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/main/puzzle/PuzzleTileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/editor/puzzle/editor-json.gd" type="Script" id=2]
[ext_resource path="res://src/main/editor/puzzle/editor-playfield.gd" type="Script" id=3]
[ext_resource path="res://src/main/editor/puzzle/box-chunk.gd" type="Script" id=4]
[ext_resource path="res://src/main/editor/puzzle/piece-chunk.gd" type="Script" id=5]
[ext_resource path="res://src/main/editor/puzzle/veg-chunk.gd" type="Script" id=6]
[ext_resource path="res://src/main/editor/puzzle/LevelChunkControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/main/editor/puzzle/level-editor.gd" type="Script" id=8]
[ext_resource path="res://src/main/ui/SettingsMenu.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=10]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=11]
[ext_resource path="res://src/main/puzzle/flat-mix.shader" type="Shader" id=12]
[ext_resource path="res://assets/main/ui/touch/move-right.png" type="Texture" id=13]
[ext_resource path="res://assets/main/ui/touch/rotate-cw.png" type="Texture" id=14]
[ext_resource path="res://src/main/ui/DialogBackdrop.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/main/editor/puzzle/dialogs.gd" type="Script" id=16]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/mix_color = Color( 1, 1, 1, 0 )

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 12 )
shader_param/mix_color = Color( 1, 1, 1, 0 )

[node name="LevelEditor" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
rect_min_size = Vector2( 1024, 600 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HBoxContainer"]
margin_right = 830.0
margin_bottom = 590.0
size_flags_horizontal = 3

[node name="Playfield" type="HBoxContainer" parent="HBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Palette" type="Control" parent="HBoxContainer/TabContainer/Playfield"]
margin_right = 409.0
margin_bottom = 554.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TabContainer/Playfield/Palette"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="GridContainer" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer"]
margin_left = 125.0
margin_right = 273.0
margin_bottom = 64.0
size_flags_horizontal = 4
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateButton" type="Button" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/Buttons"]
margin_right = 72.0
margin_bottom = 64.0
rect_min_size = Vector2( 72, 64 )
theme = ExtResource( 11 )
icon = ExtResource( 14 )
expand_icon = true

[node name="ChangeButton" type="Button" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/Buttons"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 64.0
rect_min_size = Vector2( 72, 64 )
theme = ExtResource( 11 )
icon = ExtResource( 13 )
expand_icon = true

[node name="LevelChunks" type="GridContainer" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer"]
margin_left = 49.0
margin_top = 68.0
margin_right = 349.0
margin_bottom = 336.0
size_flags_horizontal = 4
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Veg" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_right = 72.0
margin_bottom = 64.0
script = ExtResource( 6 )

[node name="Veg2x2" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 64.0
script = ExtResource( 6 )
veg_size = Vector2( 2, 2 )

[node name="JPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 152.0
margin_right = 224.0
margin_bottom = 64.0
script = ExtResource( 5 )

[node name="LPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 228.0
margin_right = 300.0
margin_bottom = 64.0
script = ExtResource( 5 )
editor_piece = 1

[node name="OPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_top = 68.0
margin_right = 72.0
margin_bottom = 132.0
script = ExtResource( 5 )
editor_piece = 2

[node name="PPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 76.0
margin_top = 68.0
margin_right = 148.0
margin_bottom = 132.0
script = ExtResource( 5 )
editor_piece = 3

[node name="QPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 68.0
margin_right = 224.0
margin_bottom = 132.0
script = ExtResource( 5 )
editor_piece = 4

[node name="TPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 228.0
margin_top = 68.0
margin_right = 300.0
margin_bottom = 132.0
script = ExtResource( 5 )
editor_piece = 5

[node name="UPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_top = 136.0
margin_right = 72.0
margin_bottom = 200.0
script = ExtResource( 5 )
editor_piece = 6

[node name="VPiece" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 76.0
margin_top = 136.0
margin_right = 148.0
margin_bottom = 200.0
script = ExtResource( 5 )
editor_piece = 7

[node name="Box3x1" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 136.0
margin_right = 224.0
margin_bottom = 200.0
script = ExtResource( 4 )
box_size = Vector2( 3, 1 )

[node name="Box3x2" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 228.0
margin_top = 136.0
margin_right = 300.0
margin_bottom = 200.0
script = ExtResource( 4 )
box_size = Vector2( 3, 2 )

[node name="Box3x3" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_top = 204.0
margin_right = 72.0
margin_bottom = 268.0
script = ExtResource( 4 )

[node name="Box3x4" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 76.0
margin_top = 204.0
margin_right = 148.0
margin_bottom = 268.0
script = ExtResource( 4 )
box_size = Vector2( 3, 4 )

[node name="Box3x5" parent="HBoxContainer/TabContainer/Playfield/Palette/VBoxContainer/LevelChunks" instance=ExtResource( 7 )]
margin_left = 152.0
margin_top = 204.0
margin_right = 224.0
margin_bottom = 268.0
script = ExtResource( 4 )
box_size = Vector2( 3, 5 )

[node name="CenterPanel" type="Control" parent="HBoxContainer/TabContainer/Playfield"]
margin_left = 413.0
margin_right = 822.0
margin_bottom = 554.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Playfield" type="Control" parent="HBoxContainer/TabContainer/Playfield/CenterPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -275.5
margin_right = 139.5
margin_bottom = 275.5
rect_min_size = Vector2( 279, 551 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="HBoxContainer/TabContainer/Playfield/CenterPanel/Playfield"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -12.0
rect_min_size = Vector2( 279, 551 )
mouse_filter = 2
color = Color( 0.113725, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="HBoxContainer/TabContainer/Playfield/CenterPanel/Playfield/Bg" instance=ExtResource( 1 )]
material = SubResource( 1 )
scale = Vector2( 0.43, 0.43 )
z_index = 0
tile_data = PoolIntArray( 196608, 1, 0, 196616, 1, 0, 1245184, 1, 0, 1245192, 1, 0 )

[node name="TileMapDropPreview" parent="HBoxContainer/TabContainer/Playfield/CenterPanel/Playfield/Bg" instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.25098 )
material = SubResource( 2 )
scale = Vector2( 0.43, 0.43 )
z_index = 0
tile_data = PoolIntArray( 196608, 1, 0, 196616, 1, 0, 327681, 2, 0, 327683, 2, 0, 393218, 2, 0, 393220, 2, 0, 1245184, 1, 0, 1245192, 1, 0 )

[node name="Properties" type="Control" parent="HBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SideButtons" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 834.0
margin_right = 1014.0
margin_bottom = 590.0
rect_min_size = Vector2( 180, 0 )

[node name="ScenarioName" type="LineEdit" parent="HBoxContainer/SideButtons"]
margin_right = 180.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 20 )
theme = ExtResource( 11 )
text = "default"

[node name="HSeparator1" type="HSeparator" parent="HBoxContainer/SideButtons"]
margin_top = 34.0
margin_right = 180.0
margin_bottom = 38.0

[node name="OpenFile" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 42.0
margin_right = 180.0
margin_bottom = 68.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Open File"

[node name="OpenResource" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 72.0
margin_right = 180.0
margin_bottom = 98.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Open Resource"

[node name="Save" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 102.0
margin_right = 180.0
margin_bottom = 128.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Save"
__meta__ = {
"_editor_description_": ""
}

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/SideButtons"]
margin_top = 132.0
margin_right = 180.0
margin_bottom = 136.0

[node name="Test" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 140.0
margin_right = 180.0
margin_bottom = 166.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Test"
__meta__ = {
"_editor_description_": ""
}

[node name="Json" type="TextEdit" parent="HBoxContainer/SideButtons"]
margin_top = 170.0
margin_right = 180.0
margin_bottom = 530.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 3
text = "abc"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
playfield_path = NodePath("../../TabContainer/Playfield/CenterPanel/Playfield")

[node name="Settings" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 534.0
margin_right = 180.0
margin_bottom = 560.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
shortcut = ExtResource( 10 )
text = "Settings"
__meta__ = {
"_editor_description_": ""
}

[node name="Quit" type="Button" parent="HBoxContainer/SideButtons"]
margin_top = 564.0
margin_right = 180.0
margin_bottom = 590.0
theme = ExtResource( 11 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_editor_description_": ""
}

[node name="Dialogs" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" parent="Dialogs" instance=ExtResource( 15 )]

[node name="OpenFile" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 80.0
margin_right = 792.0
margin_bottom = 480.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/"
current_file = "509e7c82-9399-425a-9f15-9370c2b3de8b"
current_path = "/509e7c82-9399-425a-9f15-9370c2b3de8b"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenResource" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 80.0
margin_right = 792.0
margin_bottom = 480.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.json" )
current_dir = "res://assets/main/puzzle/scenarios"
current_path = "res://assets/main/puzzle/scenarios/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="FileDialog" parent="Dialogs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 80.0
margin_right = 792.0
margin_bottom = 480.0
popup_exclusive = true
access = 2
current_dir = "/"
current_file = "509e7c82-9399-425a-9f15-9370c2b3de8b"
current_path = "/509e7c82-9399-425a-9f15-9370c2b3de8b"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="AcceptDialog" parent="Dialogs"]
margin_right = 250.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "Error"
dialog_autowrap = true

[node name="SettingsMenu" parent="." instance=ExtResource( 9 )]
[connection signal="tile_map_changed" from="HBoxContainer/TabContainer/Playfield/CenterPanel/Playfield" to="HBoxContainer/SideButtons/Json" method="_on_Playfield_tile_map_changed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/OpenFile" to="Dialogs" method="_on_OpenFile_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/OpenResource" to="Dialogs" method="_on_OpenResource_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Save" to="Dialogs" method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Test" to="." method="_on_Test_pressed"]
[connection signal="text_changed" from="HBoxContainer/SideButtons/Json" to="HBoxContainer/SideButtons/Json" method="_on_text_changed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Settings" to="SettingsMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/SideButtons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="about_to_show" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Dialogs/OpenFile" to="Dialogs" method="_on_OpenFile_file_selected"]
[connection signal="popup_hide" from="Dialogs/OpenFile" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Dialogs/OpenResource" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Dialogs/OpenResource" to="Dialogs" method="_on_OpenResource_file_selected"]
[connection signal="popup_hide" from="Dialogs/OpenResource" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Dialogs/Save" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="file_selected" from="Dialogs/Save" to="Dialogs" method="_on_Save_file_selected"]
[connection signal="popup_hide" from="Dialogs/Save" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="about_to_show" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_about_to_show"]
[connection signal="popup_hide" from="Dialogs/Error" to="Dialogs/Backdrop" method="_on_Dialog_popup_hide"]
[connection signal="quit_pressed" from="SettingsMenu" to="." method="_on_Quit_pressed"]
